2024-10-27 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.lex,
	  src/SDCCglobl.h,
	  src/SDCCmain.c:
	  Add C2y mode in preparation for the first C2y features.

2024-10-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c:
	  Small improvment in stm8 struct/union parameter passing.

2024-10-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/z80n/mul.s,
	  device/lib/z80n/mulchar.s:
	  Z80N hardware multiplication for _mulint, patch #481 by Janko Stamenović.
	* src/SDCCcse.c,
	  support/regression/tests/bug-3788.c:
	  Fix bug #3788.

2024-10-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3788.c:
	  Regression test for bug #3788 (disabled until bug is fixed).

2024-10-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix bug #3789.

2024-10-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Generalize a byte-assembly | optimization to make better use of 16-bit stores to stack.

2024-10-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/z80/gen.c:
	  Some improvements in optimizations based on generalized constant propagation.

2024-10-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c:
	  Optimize out some casts and assignments earlier, part of RFE #937.
	* src/z80/gen.c:
	  Improve handling of parameters of z80 builtin functions.

2024-10-14 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c:
	  Optimize out some more casts, part of RFE #937.

2024-10-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c,
	  src/z80/gen.c:
	  Fix a z80 pointer write codegen bug.

2024-10-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/f8/gen.c: fixed warnings
	* src/mos6502/gen.c (genFunction, genEndFunction): fixed bug #3787
	* src/ds390/main.c: cosmetics
	* src/SDCCralloc.hpp: fail for all 1.85.x
	* src/SDCCsalloc.hpp: require Boost >= 1.79